package players;

public enum TypePlayer {
    HUMANPLAYER,
    IA
}
