@startuml

class Round {
    -id_round int
    -id_match Match
    -id_shape1 Shape
    -id_shape2 Shape
    -id_score Score
}

class Match {
    -id_match int
    -id_score Score
    -id_player1 Player
    -id_player2 Player
}

class Score {
    -id_score int
    -id_player1 Player
    -id_player2 Player
    -id_winner Player
}

class Shape {
    -id_shape int
    -name String
}

class Player{
    -id_player int
    -name String
    -id_typePlayer TypePlayer
}

class TypePlayer {
    -id_typePlayer int
    -name String
}

Match *-- Round
Match *-- Player
Round o-- Shape
Player *-- TypePlayer
Match *-- Score 

@enduml